# hede

./: .gitignore  CLAUDE.md  README.md
backend/: .image_refresh_status.json  __init__.py  api_main.py  cli.py  config.py  pyproject.toml
backend/alembic/: README.md  env.py  script.py.mako
backend/api/: app.py  auth_middleware.py  excel_export.py  fine_table_cache.py  operation_log_utils.py  product_goods_cache.py  schemas.py
backend/domain/: __init__.py  auth_schema.py  color_barcode_schema.py  daily_sales_schema.py  excluded_skus.py  excluded_skus.txt  fields.py  fine_table_snapshot_schema.py  gj_brand.py  gj_schema.py  inventory_schema.py  inventory_sources.py  jst_full_stock_schema.py  jst_stock_snapshot_schema.py  operation_log_schema.py  product_defaults.py  product_goods_detail_snapshot_schema.py  product_goods_historical_orders_schema.py  product_goods_historical_sales_schema.py  product_goods_sales_period_schema.py  product_goods_schema.py  product_goods_shop_channel_schema.py  schema.py  smiley_schema.py  sources.py  task_status_schema.py  vip_schema.py  vip_sources.py
backend/fileio/: __init__.py  cbanner_mens_group_reader.py  excel_reader.py  image_matcher.py
backend/pipeline/: __init__.py  import_pipeline.py
backend/scripts/: __init__.py  add_color_spec.py  add_performance_indexes.py  add_product_name.py  apply_excluded_skus.py  audit_product_archive_costs.py  backfill_product_goods_annual_sales.py  backfill_product_goods_detail_snapshots.cmd  backfill_product_goods_manual_fields_history.py  check_daily_sales_filtered.py  convert_units_with_wps.ps1  (+67 more)
(+166 files in other folders)
