[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hede-backend"
version = "0.1.0"
description = "Excel product archive importer for PostgreSQL"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "openpyxl>=3.1.5",
    "orjson>=3.10.0",
    "python-dotenv>=1.1.1",
    "SQLAlchemy>=2.0.44",
    "psycopg[binary]>=3.2.12",
    "uvicorn>=0.32.0",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.2",
]

[project.scripts]
hede = "cli:main"
hede-backend = "cli:main"

[tool.setuptools]
py-modules = ["cli", "config", "main"]

[tool.setuptools.packages.find]
include = ["domain", "domain.*", "fileio", "fileio.*", "pipeline", "pipeline.*", "storage", "storage.*", "transform", "transform.*"]

[tool.pyright]
extraPaths = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
